--- a/styles/style.css
+++ b/styles/style.css
@@ -183,3 +183,23 @@ image-viewer .threesixty:-moz-full-screen {
     margin-top: 0;
     padding-top: 200px;
 }
+
+/******/
+
+md-grid-tile-footer figcaption{
+    width: 100%;
+}
+
+/*.md-button.md-fab.md-mini.micro {*/
+    /*line-height: 20px;*/
+    /*width: 20px;*/
+    /*height: 20px;*/
+/*}*/
+
+.md-button.md-fab.transparent{
+    background-color: rgba(0,0,0,.28);
+}
+
+.md-button.md-fab.transparent:hover{
+    background-color: #222;
+}
